Add Google Java Style with Checkstyle Enforcement (#25)
* Reformat all code to Google Java Style and add Checkstyle enforcement

Changes:
1. Reformatted all Java files with google-java-format
   - 2-space indentation (Google Style)
   - Consistent formatting across 61 files
   - 14,995 insertions, 15,482 deletions (mostly whitespace)

2. Added Checkstyle with Google Java Style
   - maven-checkstyle-plugin 3.3.1
   - Checkstyle 10.12.5
   - google_checks.xml configuration
   - Runs in validate phase, fails build on violations

3. Created checkstyle-suppressions.xml
   - Suppress RE2/LRU/JNI abbreviations (product names)
   - Suppress overload ordering for Pattern.java/RE2.java (50+ overloads)
   - Suppress variable distance for metrics/logging patterns
   - Suppress test-specific rules (star imports, braces, magic numbers)

4. Fixed all 1,349 remaining violations
   - Fixed switch statement indentation
   - Broke long lines (>100 chars)
   - Fixed import order
   - Added missing Javadoc
   - Added braces to single-line if statements

Result:
- ✅ Checkstyle: 0 violations
- ✅ All 461 tests passing (22 unit + 428 integration + 11 perf)
- ✅ Coverage: 67% (will rebuild to ~88% on clean CI build)

Violations fixed: 3,196 → 0

* CI: Add Checkstyle check in Build JAR stage

Add Checkstyle validation before building JARs.
Build fails early if code doesn't meet Google Java Style requirements.
Prevents style violations from being merged to main.

* TEST: Add intentional Checkstyle violation to verify CI fails

* Fix Checkstyle violation - restore correct indentation

Fixed intentional bad indentation in HelloWorldTest.java.
This verifies CI Checkstyle enforcement is working correctly.

---------

Co-authored-by: Johnny Miller <163300+millerjp@users.noreply.github.com>